[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dvc-tools"
version = "0.2.0"
description = "Convenient tools for working with DVC in HPC environments"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Swarbrick Lab"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "click>=8.0.0",
    "confuse>=2.0.0",
    "platformdirs>=3.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/swarbricklab/dvc_tools"
Repository = "https://github.com/swarbricklab/dvc_tools"
Documentation = "https://github.com/swarbricklab/dvc_tools/blob/main/README.md"
Issues = "https://github.com/swarbricklab/dvc_tools/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
gcp = [
    "google-cloud-secret-manager>=2.0.0",
]
gcs = [
    "fsspec>=2023.1.0",
    "gcsfs>=2023.1.0",
]
s3 = [
    "fsspec>=2023.1.0",
    "s3fs>=2023.1.0",
]
cloud = [
    "fsspec>=2023.1.0",
    "gcsfs>=2023.1.0",
    "s3fs>=2023.1.0",
]

[project.scripts]
dt = "dt.cli:cli"

[tool.setuptools]
packages = ["dt", "dt.secrets"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
